Name:                reldiagram
Version:             0.1
Synopsis:            Diagrams foreign key relationships in PostgreSQL, produces Graphviz output.
Description:         Examines foreign key constraints between PostgreSQL tables and produces Graphviz graphs for rendering.
Homepage:            http://bitbucket.org/fusiongyro/reldiagram
Bug-Reports:       https://bitbucket.org/fusiongyro/reldiagram/issues?status=new&status=open
License:             BSD3
License-file:        LICENSE
Author:              Daniel Lyons
Maintainer:          fusion@storytotell.org
Copyright:           2011 Daniel Lyons
Category:            Database
Build-type:          Simple
Cabal-version:       >=1.2

Executable reldiagram
  Main-Is: Main.hs
  Other-modules: 
    Control.Exception.Utils
    Control.Monad.Utils
    Database
    Diagram
    Options
    Types
  Build-depends: base == 4.16.4.0, unix == 2.7.2.2, HDBC == 2.4.0.4, HDBC-postgresql == 2.5.0.1
  ghc-options:       -Wall
  HS-Source-Dirs:       src/